--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "path": "^0.12.7",
     "sqlite3": "^5.1.6"
   },
   "scripts": {
